--- a/package.json
+++ b/package.json
@@ -5,15 +5,21 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "connect-mongo": "^5.1.0",
+    "dotenv": "^16.4.7",
     "express": "^4.21.1",
+    "express-session": "^1.18.1",
     "mongodb": "^6.10.0",
     "mongoose": "^8.5.1",
     "nodemon": "^3.1.4",
+    "passport": "^0.7.0",
+    "passport-local-mongoose": "^8.0.0",
     "playwise": "file:"
   }
 }
