--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "nodemon": "^3.1.4",
     "passport": "^0.7.0",
     "passport-local-mongoose": "^8.0.0",
-    "playwise": "file:"
+    "playwise": "file:",
+    "twilio": "^5.4.0",
+    "uuid": "^11.0.3"
   }
 }
