--- a/package.json
+++ b/package.json
@@ -17,12 +17,19 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
     "express-session": "^1.18.1",
+    "form-data": "^4.0.2",
+    "mailgun": "^0.5.0",
+    "mailgun.js": "^11.1.0",
+    "moment": "^2.30.1",
+    "moments": "^0.0.2",
     "mongodb": "^6.10.0",
     "mongoose": "^8.5.1",
+    "nodemailer": "^6.10.0",
     "nodemon": "^3.1.4",
     "passport": "^0.7.0",
     "passport-local-mongoose": "^8.0.0",
     "playwise": "file:",
+    "resend": "^4.1.2",
     "twilio": "^5.4.0",
     "uuid": "^11.0.3"
   }
